Closed Bug 1402592 Opened 8 years ago Closed 8 years ago

Crash in shutdownhang | ZwWaitForKeyedEvent | RtlSleepConditionVariableCS | SleepConditionVariableCS | mozilla::detail::ConditionVariableImpl::wait | mozilla::CondVar::Wait | mozilla::ThreadEventQueue<T>::GetEvent

Categories

(Core :: Graphics: Layers, defect, P1)

58 Branch
x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 + fixed
firefox58 --- fixed

People

(Reporter: calixte, Assigned: aosmond)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau][gfx-noted])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-294ba17c-b23d-462a-8dc2-23f7f0170923. ============================================================= There are 29 crashes on nightly 57-58 starting with buildid 20170921100141. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1389021. [1] https://hg.mozilla.org/mozilla-central/rev/4dd86bbce649
Flags: needinfo?(aosmond)
hi, i think it's mainly a shift/change in signature generation due to bug 1402037
oh sorry, please disregard the prior comment - the reports started coming in even before the change in signature generation yesterday.
Crash Signature: [@ shutdownhang | ZwWaitForKeyedEvent | RtlSleepConditionVariableCS | SleepConditionVariableCS | mozilla::detail::ConditionVariableImpl::wait | mozilla::CondVar::Wait | mozilla::ThreadEventQueue<T>::GetEvent] → [@ shutdownhang | ZwWaitForKeyedEvent | RtlSleepConditionVariableCS | SleepConditionVariableCS | mozilla::detail::ConditionVariableImpl::wait | mozilla::CondVar::Wait | mozilla::ThreadEventQueue<T>::GetEvent] [@ shutdownhang | NtWaitForKeyedEvent | RtlSl…
Crash Signature: RtlSleepConditionVariableCS | SleepConditionVariableCS | mozilla::detail::ConditionVariableImpl::wait | mozilla::CondVar::Wait | mozilla::ThreadEventQueue<T>::GetEvent] → RtlSleepConditionVariableCS | SleepConditionVariableCS | mozilla::detail::ConditionVariableImpl::wait | mozilla::CondVar::Wait | mozilla::ThreadEventQueue<T>::GetEvent] [@ shutdownhang | NtWaitForAlertByThreadId | RtlSleepConditionVariableCS | SleepCond…
Depends on: 1402037
[Tracking Requested - why for this release]: There are 97 crashes for 66 installations in 57.0b (dev edition).
Assignee: nobody → aosmond
Priority: -- → P1
Whiteboard: [clouseau] → [clouseau][gfx-noted]
Attachment #8912241 - Flags: review?(dvander)
Attachment #8912241 - Flags: review?(dvander) → review+
Pushed by aosmond@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/99dcb764fd9f Ensure that ImageBridgeParent instances are closed by the parent during shutdown. r=dvander
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Crash Signature: SleepConditionVariableCS | mozilla::detail::ConditionVariableImpl::wait | mozilla::CondVar::Wait | mozilla::ThreadEventQueue<T>::GetEvent ] → SleepConditionVariableCS | mozilla::detail::ConditionVariableImpl::wait | mozilla::CondVar::Wait | mozilla::ThreadEventQueue<T>::GetEvent ] [@ shutdownhang | mozilla::layers::CompositorThreadHolder::Shutdown]
Blocks: 1403888
Comment on attachment 8912241 [details] [diff] [review] Ensure that ImageBridgeParent instances are closed by the parent during shutdown., v1 Approval Request Comment [Feature/Bug causing the regression]: Bug 1401668 [User impact if declined]: May experience shutdown hangs on Windows. [Is this code covered by automated tests?]: Yes. [Has the fix been verified in Nightly?]: Yes, crash reports stopped on nightly after landing the patch. [Needs manual test from QE? If yes, steps to reproduce]: No. [List of other uplifts needed for the feature/fix]: N/A [Is the change risky?]: No. [Why is the change risky/not risky?]: We landed a similar fix for a different protocol on 56.0. The content process could already handle the parent shutting it down because the GPU process can die at any moment. [String changes made/needed]: N/A
Attachment #8912241 - Flags: approval-mozilla-beta?
Comment on attachment 8912241 [details] [diff] [review] Ensure that ImageBridgeParent instances are closed by the parent during shutdown., v1 Fix a top crash, taking it. Should be in 57b4
Attachment #8912241 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
(In reply to Andrew Osmond [:aosmond] from comment #7) > [Is this code covered by automated tests?]: Yes. > [Has the fix been verified in Nightly?]: Yes, crash reports stopped on > nightly after landing the patch. > [Needs manual test from QE? If yes, steps to reproduce]: No. Setting qe-verify- based on Andrew's assessment on manual testing needs and the fact that this fix has automated coverage.
Flags: qe-verify-
Depends on: 1405364
Depends on: 1413011
See Also: → 1668034
See Also: → 1613128
Regressions: 1643815
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: